--- a/k23cnt3day8/k23cnt3day8/src/main/resources/application.properties
+++ b/k23cnt3day8/k23cnt3day8/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Keep entity table and column names as-is (no snake_case conversion)
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# C?u hình upload linh ho?t
+app.upload.base-dir=./uploads
+
+# C?u hình kích th??c file upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
