--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/application.properties
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/application.properties
@@ -33,8 +33,16 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 
 # File Upload Configuration
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.file-size-threshold=2KB
+
+# Session Configuration
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
+server.servlet.session.persistent=true
 
 # Logging Configuration
 logging.level.com.lvsforum=DEBUG
@@ -43,5 +51,5 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # File Upload Directory
-app.upload.dir=uploads
+app.upload.dir=src/main/resources/static/uploads/
 app.max-file-size=10485760
